syntax = "proto3";

package contract;

option go_package = "contract/";

import "google/api/annotations.proto";

message RedirectRequest {
   string id = 1;
}

message RedirectResponse {
  string url = 1;
}

service RedirectHandler {
  rpc Redirect(RedirectRequest) returns (RedirectResponse){
    option (google.api.http) = {
      get: "/{id}"
    };
  }
}